[package]
name = "parpaingbot-v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chronos = "0.0.1"
dotenv = "0.15.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
poise = "0.5.6"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
url = "2.4.1"

[dependencies.serenity]
default-features = false
features = ["builder", "client", "gateway", "model", "utils", "collector"]
version = "0.11.6"

[dependencies.sqlx]
version = "0.7.1"
features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"]
